[package]
name = "risp8"
version = "0.1.0"
authors = ["Stovent <StoventTAS@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Chip8 interpreter, cached interpreter and JIT compiler in Rust, with both a library and an executable."
repository = "https://github.com/Stovent/risp8"
keywords = ["chip8", "emulator", "interpreter", "jit"]
categories = ["compilers", "emulators"]

[dependencies]
kanal = "0.1.0-pre8"
pixels = "0.13.0"
rand = "0.7.0"
winit = { version = "0.29.3", default-features = false, features = ["rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
dynasmrt = "2.0.0"
