[package]
name = "risp8-gui"
version = "0.1.0"
authors = ["Stovent <StoventTAS@gmail.com>"]
edition = "2024"
license = "MIT"
description = "GUI frontend for risp8"
repository = "https://github.com/Stovent/risp8"

[dependencies]
pixels = "0.15.0"
risp8 = { path = "../risp8" }
winit = { version = "0.30.10", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
